--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -1,10 +1,14 @@
 .navigation {
+  ul {
+    padding: 0px;
+  }
+
   a {
     color: black;
     text-decoration: none;
     text-transform: uppercase;
   }
-  
+
   a:hover {
     color: hsl(200,50%,50%);
     font-weight: bold;
