--- a/src/components/Campaigns/Campaigns.scss
+++ b/src/components/Campaigns/Campaigns.scss
@@ -56,6 +56,22 @@
     margin: 10px;
     text-align: left;
 }
+
+.status-Error{
+    // background-color: hsl(0, 50%, 60%);
+    border: 4px solid hsl(0, 50%, 60%);
+}
+
+.status-Draft{
+    // background-color: hsl(50, 50%, 70%);
+    border: 4px solid hsl(55, 80%, 50%);
+}
+
+.status-Sent{
+    // background-color: hsl(120, 50%, 70%);
+    border: 4px solid hsl(120, 50%, 70%);
+}
+
 .campaign-frame:hover {
     background-color: hsl(200, 50%, 80%);
 }
